<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc_api_version"
                android:textAppearance="@android:style/Widget.Material.CompoundButton.Switch"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nfc_to_write_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc_prop_unknown" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nfc_to_write_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nfc_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nfc_to_write_mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nfc_mac" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc_function"
                android:textAppearance="@android:style/Widget.Material.CompoundButton.Switch"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/nfc_function_wireless_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/function_wireless_charge" />

                <CheckBox
                    android:id="@+id/nfc_function_charge_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/function_charge_info" />

                <CheckBox
                    android:id="@+id/nfc_function_usb_transponder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/function_usb_transponder" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nfc_to_write_remote_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nfc_remote_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc_linker"
                android:textAppearance="@android:style/Widget.Material.CompoundButton.Switch"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nfc_to_write_final"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nfc_prop_unknown"
                android:textIsSelectable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/nfc_write_cancel"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_nb"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/nfc_write_confirm"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_pb"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>