<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:activity=".activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/nfc_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/transparent"
            app:layout_collapseMode="pin"
            app:title="@string/main_card_nfc_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/nfc_status_card"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="5dp">

                    <LinearLayout
                        android:id="@+id/nfc_status_card_overlay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/base_gray_tint"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:id="@+id/nfc_status_card_indicator_image"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            android:tint="#ffffff"
                            app:srcCompat="@drawable/ic_baseline_device_unknown_24" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/nfc_connection"
                                android:textAllCaps="false"
                                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/nfc_status_card_indicator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nfc_status_disconnected"
                                android:textColor="#FFFFFF" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>